# app.sample

./: .gitignore  Makefile  main.py  pyproject.toml
client/: __init__.py  client.py  models.py  types.py
data/: characters.json  episodes.json  locations.json
